--- a/django1.1/dj11/blog/templates/blog/about.html
+++ b/django1.1/dj11/blog/templates/blog/about.html
@@ -1,10 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>About</title>
-</head>
-<body>
+{% extends "blog/base.html" %}
+{% block content %}
     <h1>About</h1>
-</body>
-</html>
+{% endblock content %}
