--- a/django1.1/dj11/blog/templates/blog/home.html
+++ b/django1.1/dj11/blog/templates/blog/home.html
@@ -10,7 +10,15 @@
                 </div>
                 <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
                 <p class="article-content">{{ post.content }}</p>
-              </div>
+                {% if post.tags.exists %}
+                <div class="article-tags">
+                    <strong>Tags:</strong>
+                    {% for tag in post.tags.all %}
+                        <a href="{% url 'search-tags' tag.name %}">#{{ tag.name }}</a>
+                    {% endfor %}
+                </div>
+                {% endif %}
+            </div>
         </article>
     {% endfor %}
 {% endblock content %}
